fixed invisible content on modal window

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -147,7 +147,7 @@ figure img {
 
 .modal-content {
   background-color: #fefefe;
-  margin: auto;
+  margin: 5em auto;
   padding: 20px;
   border: 1px solid #888;
   width: 75%;
